[package]
name = "abnf_parser_parser"
version = "0.1.0"
authors = ["Sean Flinn <sflinn54@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abnf = "0.13"
# petgraph = "0.5.1"
anyhow = "1.0"
nom = "7"

[dev-dependencies]
rstest = "0.15.0"
